--- a/portfolio.html
+++ b/portfolio.html
@@ -326,6 +326,21 @@
           </ul>
         </div>
       </div>
+      <div class="joinn">
+        <h2 class="visually-hidden">Форма підписки</h2>
+        <h3 class="welcome-title">Підпишіться на розсилку</h3>
+        <form class="modal-form" autocomplete="off">
+          <div class="footer-form">
+            <label for="mail"></label>
+            <input type="email" name="email" id="mail" placeholder="E-mail" />
+            <button class="link-button" type="submit">
+              Підписатися
+              <svg class="join-icon" width="24" height="24">
+                <use href="./images/sprite.svg#icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
     </footer>
     <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
