--- a/index.html
+++ b/index.html
@@ -447,29 +447,29 @@
             </li>
           </ul>
         </div>
-      </div>
-      <div class="joinn">
-        <h2 class="visually-hidden">Форма підписки</h2>
-        <h3 class="welcome-title">Підпишіться на розсилку</h3>
-        <form class="modal-form" autocomplete="off">
-          <div class="footer-form">
-            <label for="mail"></label>
-            <input type="email" name="email" id="mail" placeholder="E-mail" />
-            <button class="link-button" type="submit">
-              Підписатися
-              <svg class="join-icon" width="24" height="24">
-                <use href="./images/sprite.svg#icon-send"></use>
-              </svg>
-            </button>
-          </div>
-        </form>
+        <div class="join">
+          <h2 class="visually-hidden">Форма підписки</h2>
+          <h3 class="welcome-title">Підпишіться на розсилку</h3>
+          <form class="modal-form" autocomplete="off">
+            <div class="footer-form">
+              <label for="mail"></label>
+              <input type="email" name="email" id="mail" placeholder="E-mail"/>
+              <button class="link-button" type="submit">
+                Підписатися
+                <svg class="join-icon" width="24" height="24">
+                  <use href="./images/sprite.svg#icon-icon-send-1"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="close" data-modal-close>
           <svg class="close-modal" width="18" height="18">
-            <use href="./images/symbol.svg#icon-icon-send-1"></use>
+            <use href="./images/symbol.svg#icon-close-black-18dp-2-1-1"></use>
           </svg>
         </button>
         <p class="modal-title">Залиште свої дані, ми вам передзвонимо</p>
@@ -552,8 +552,10 @@
                 <svg class="icon-che" width="16" height="15">
                   <use href="./images/symbol.svg#icon-icon-check"></use>
                 </svg>
-              </span>Погоджуюся з розсилкою та приймаю</label
-            ><a class="modal-link" href="#"> Умови договору</a>
+              </span>
+              Погоджуюся з розсилкою та приймаю
+              <a class="modal-link" href="#"> Умови договору</a></label
+            >
           </div>
           <button type="submit" class="send-btn">Відправити</button>
         </form>
