--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
                 </svg>
               </span>
               Погоджуюся з розсилкою та приймаю
-              <a class="modal-link" href="#">Умови договору</a></label
+              <a class="chek-link modal-link" href="#">Умови договору</a></label
             >
           </div>
           <button type="submit" class="send-btn">Відправити</button>
