--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
               <button class="link-button" type="submit">
                 Підписатися
                 <svg class="join-icon" width="24" height="24">
-                  <use href="./images/sprite.svg#icon-icon-send-1"></use>
+                  <use href="./images/symbol.svg#icon-icon-send-1"></use>
                 </svg>
               </button>
             </div>
