--- a/index.html
+++ b/index.html
@@ -539,7 +539,7 @@
             ></textarea>
             <p class="error">Поле не заповнене</p>
           </div>
-          <div class="input-field">
+          <div class="input-field input-field-comm">
             <input
               class="input-che visually-hidden"
               type="checkbox"
