--- a/index.html
+++ b/index.html
@@ -25,23 +25,23 @@
         </a>
         <nav>
           <ul class="list link nav-main">
-            <li class="item">
-              <a href="./index.html" class="line current header-link link"
+            <li class="nav-main-item">
+              <a href="./index.html" class="line current nav-main-link link"
                 >Студія</a
               >
             </li>
-            <li class="item">
-              <a href="./portfolio.html" class="header-link link">Портфоліо</a>
+            <li class="nav-main-item">
+              <a href="./portfolio.html" class="nav-main-link link">Портфоліо</a>
             </li>
-            <li class="item">
-              <a href="" class="header-link link">Контакти</a>
+            <li class="nav-main-item">
+              <a href="" class="nav-main-link link">Контакти</a>
             </li>
           </ul>
         </nav>
         <div class="head-contacts">
           <ul class="list nav-main">
             <li class="item-nav">
-              <a href="mailto:info@devstudio.com" class="link-mail link">
+              <a href="mailto:info@devstudio.com" class="nav-mail-link link">
                 <svg class="icon" width="16" height="12">
                   <use href="./images/symbol.svg#icon-envelope-1"></use>
                 </svg>
