--- a/portfolio.html
+++ b/portfolio.html
@@ -27,32 +27,32 @@
         >
         <nav>
           <ul class="list link nav-main">
-            <li class="item">
-              <a href="" class="header-link link title">Студія</a>
+            <li class="nav-main-item">
+              <a href="./index.html" class="header-link link title">Студія</a>
             </li>
-            <li class="item">
-              <a href="./index.html" class="line current header-link link title"
+            <li class="nav-main-item">
+              <a href="" class="line current header-link link title"
                 >Портфоліо</a
               >
             </li>
-            <li class="item">
+            <li class="nav-main-item">
               <a href="" class="header-link link title">Контакти</a>
             </li>
           </ul>
         </nav>
         <div class="head-contacts">
           <ul class="list nav-main">
-            <li class="item">
+            <li class="nav-main-item">
               <a
                 href="http://mailto:info@devstudio."
-                class="link-mail link title"
+                class="nav-mail-link link title"
                 ><svg class="icon" width="16" height="12">
                   <use href="./images/symbol.svg#icon-envelope-1"></use>
                 </svg>
                 info@devstudio.com
               </a>
             </li>
-            <li class="item">
+            <li class="nav-main-item">
               <a href="tel:+380991111111" class="header-tell link">
                 <svg class="icon" width="10" height="16">
                   <use href="./images/symbol.svg#icon-smartphone-1"></use>
